--- a/index.html
+++ b/index.html
@@ -9,30 +9,33 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
-        <nav class="navbar">
-            <div class="nav-container">
-                <div class="logo">
+<header class="header">
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="logo">
+                <a href="" onclick="location.reload()" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
                     <div class="logo-icon">
                         <i class="fas fa-spray-can"></i>
                     </div>
                     <span class="logo-text">Glitters and <strong>Sparkles</strong></span>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
-                    <li><a href="#" class="nav-link" data-page="about">About</a></li>
-                    <li><a href="#" class="nav-link" data-page="services">Services</a></li>
-                    <li><a href="#" class="nav-link" data-page="contact">Contact</a></li>
-                    <li><a href="#" class="nav-link quote-btn" data-page="quote">Get Quote</a></li>
-                </ul>
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+                </a>
             </div>
-        </nav>
-    </header>
+            <ul class="nav-menu">
+                <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
+                <li><a href="#" class="nav-link" data-page="about">About</a></li>
+                <li><a href="#" class="nav-link" data-page="services">Services</a></li>
+                <li><a href="#" class="nav-link" data-page="contact">Contact</a></li>
+                <li><a href="#" class="nav-link quote-btn" data-page="quote">Get Quote</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </nav>
+</header>
+
 
     <!-- Main Content -->
     <main class="main-content">
@@ -104,7 +107,7 @@
                         <div class="testimonial">
                             <div class="stars">★★★★★</div>
                             <p>"Punctual, professional, and detail-oriented. Glitters and Sparkles Cleaning exceeded our expectations!"</p>
-                            <div class="author">- Mrs Victor Adeboyejo, Restaurant Owner</div>
+                            <div class="author">- Mrs Victoria Adeboyejo, Restaurant Owner</div>
                         </div>
                     </div>
                 </div>
@@ -143,7 +146,7 @@
 
                 <div class="stats">
                     <div class="stat">
-                        <div class="stat-number">250+</div>
+                        <div class="stat-number">150+</div>
                         <div class="stat-label">Happy Customers</div>
                     </div>
                     <div class="stat">
@@ -279,14 +282,14 @@
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h4>Phone</h4>
-                                <p>+447 (555) 123-4567</p>
+                                <p>+447 7836 202627</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email</h4>
-                                <p>info@becastcleaning.com</p>
+                                <p>info@glittersandsparkles.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -365,10 +368,9 @@
                     <span class="radio-custom"></span>
                     <span class="service-label">After Builder Clean</span>
                 </label>
-            </div>
-        </div>
-    </form>
-</div>
+                     </div>
+                    </div>
+                </div>
 
                 <!-- Room Selection Based on Service Type -->
                 <div class="form-section room-selection" id="deepCleaningRooms">
@@ -639,7 +641,13 @@
 
                <div class="quote-section">
                         <h3>Preferred Cleaning Date</h3>
-                        <input type="date" name="cleaningDate" required placeholder="Select a date" style="padding: 13px; border-radius: 5px;" >
+                        <input 
+                                type="date" 
+                                name="cleaningDate" 
+                                required 
+                                placeholder="Select a date" 
+                                style="padding: 15px 20px; font-size: 18px; border-radius: 8px; width: 100%; max-width: 350px;"
+                            >
                         </div>
 
                         <div class="quote-section">
@@ -665,13 +673,18 @@
                         <!-- Submit Button -->
                         <button type="submit" class="btn btn-primary">Request Official Quote</button>
             </form>
+            <div class="quote-info">
+                <h3>How It Works</h3>
+                <p>1. Select your service type and rooms.</p>
+                <p>2. Enter your preferred cleaning date and contact information.</p>
+                <p>3. Submit the form to receive a personalized quote within 24 hours.</p>
         </div>
     </div>
 </section>
 
     </main>
 
-     <a href="https://wa.me/2348067616620" class="whatsapp-btn" target="_blank">
+     <a href="https://wa.me/4477836202627" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
@@ -712,9 +725,12 @@
                 </div> -->
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p><i class="fas fa-phone"></i> +447 (555) 123-4567</p>
-                    <p><i class="fas fa-envelope"></i> info@becastcleaning.com</p>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Clean Street, Sparkle City, SC</p>
+                    <p><i class="fas fa-phone"></i> +447 7836 202627</p>
+                    <p><i class="fas fa-envelope"></i> info@glittersandsparkles.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 345, Victoria Road 
+                                                                Glasgow 
+                                                                G42 7SA
+                                                                </p>
                 </div>
             </div>
             <div class="footer-bottom">
