--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="testimonial active">
                             <div class="stars">★★★★★</div>
                             <p>"Glitters and Sparkles Cleaning transformed our office space! Professional, reliable, and thorough. Highly recommended!"</p>
-                            <div class="author">- Mr Isaac Ojo, Office Manager</div>
+                            <div class="author">- Mr Isaac Jones, Office Manager</div>
                         </div>
                         <div class="testimonial">
                             <div class="stars">★★★★★</div>
@@ -109,6 +109,11 @@
                             <p>"Punctual, professional, and detail-oriented. Glitters and Sparkles Cleaning exceeded our expectations!"</p>
                             <div class="author">- Mrs Victoria Adeboyejo, Restaurant Owner</div>
                         </div>
+                        <div class="testimonial">
+                            <div class="stars">★★★★★</div>
+                            <p>"Glitters and Sparkles Cleaning exceeded our expectations!"</p>
+                            <div class="author">- Mr Scott John, Home Owner</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,13 +124,13 @@
             <div class="container">
                 <div class="about-hero">
                     <h1>About Glitters and Sparkles Cleaning</h1>
-                    <p class="lead">Your trusted partner in creating spotless, healthy environments since 2020</p>
+                    <p class="lead">Your trusted partner in creating spotless, healthy environments since 2022</p>
                 </div>
 
                 <div class="about-content">
                     <div class="about-text">
                         <h2>Our Story</h2>
-                        <p>Founded in 2020, Glitters and Sparkles Cleaning has grown from a small local business to the region's most trusted cleaning service provider. We believe that a clean environment is essential for health, productivity, and peace of mind.</p>
+                        <p>Glitters and Sparkles Cleaning has grown from a small local business to the region's most trusted cleaning service provider. We believe that a clean environment is essential for health, productivity, and peace of mind.</p>
                         
                         <h3>Our Mission</h3>
                         <p>To provide exceptional cleaning services that exceed expectations while maintaining the highest standards of professionalism, reliability, and environmental responsibility.</p>
@@ -146,11 +151,11 @@
 
                 <div class="stats">
                     <div class="stat">
-                        <div class="stat-number">150+</div>
+                        <div class="stat-number">100+</div>
                         <div class="stat-label">Happy Customers</div>
                     </div>
                     <div class="stat">
-                        <div class="stat-number">5</div>
+                        <div class="stat-number">3+</div>
                         <div class="stat-label">Years Experience</div>
                     </div>
                     <div class="stat">
