--- a/index.html
+++ b/index.html
@@ -643,6 +643,67 @@
                         </div>
                     </div>
                 </div>
+                    
+  <div class="quote-section" id="extraServices">
+    <h3>Extras</h3>
+    <div class="extras-options">
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Venetian Blind Cleaning (Per Room)" data-price="20">
+            <span class="radio-custom"></span>
+            <span class="service-label">Venetian Blind Cleaning (Per Room) - £20</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Inside Fridge/Freezer" data-price="29">
+            <span class="radio-custom"></span>
+            <span class="service-label">Inside Fridge/Freezer - £29</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Inside Deep Oven" data-price="47">
+            <span class="radio-custom"></span>
+            <span class="service-label">Inside Deep Oven - £47</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Tile/Wet Wall Cleaning (Per Room)" data-price="28">
+            <span class="radio-custom"></span>
+            <span class="service-label">Tile/Wet Wall Cleaning (Per Room) - £28</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Inside Kitchen Cupboards" data-price="46">
+            <span class="radio-custom"></span>
+            <span class="service-label">Inside Kitchen Cupboards - £46</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Inside Dishwasher" data-price="26">
+            <span class="radio-custom"></span>
+            <span class="service-label">Inside Dishwasher - £26</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Inside Washing Machine" data-price="26">
+            <span class="radio-custom"></span>
+            <span class="service-label">Inside Washing Machine - £26</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Wall Cleaning (Per Room)" data-price="33">
+            <span class="radio-custom"></span>
+            <span class="service-label">Wall Cleaning (Per Room) - £33</span>
+        </label>
+
+        <label class="service-type-option">
+            <input type="checkbox" name="extras" value="Carpet Shampooing (Per Room)" data-price="28">
+            <span class="radio-custom"></span>
+            <span class="service-label">Carpet Shampooing (Per Room) - £28</span>
+        </label>
+    </div>
+</div>
+
+
 
                <div class="quote-section">
                         <h3>Preferred Cleaning Date</h3>
@@ -658,10 +719,10 @@
                         <div class="quote-section">
                         <h3>Contact Information</h3>
                         <div class="form-row">
-                            <input type="text" name="quoteName" placeholder="Your Name" required style=" padding: 13px; border-radius: 5px;">
-                            <input type="email" name="quoteEmail" placeholder="Your Email" required style=" padding: 13px; border-radius: 5px;">
+                            <input type="text" name="name" placeholder="Your Name" required style=" padding: 13px; border-radius: 5px;">
+                            <input type="email" name="email" placeholder="Your Email" required style=" padding: 13px; border-radius: 5px;">
                         </div> <br>
-                        <input type="tel" name="quotePhone" placeholder="Your Phone Number" style=" padding: 13px; border-radius: 5px;">
+                        <input type="tel" name="phone" placeholder="Your Phone Number" style=" padding: 13px; border-radius: 5px;">
                         </div>
                         <div class="quote-section">
                             <h3>Additional Cleaning Requests</h3>
@@ -678,7 +739,7 @@
                         <!-- Submit Button -->
                         <button type="submit" class="btn btn-primary">Request Official Quote</button>
             </form>
-            <div class="quote-info">
+            <div class="quote-info"> <br>
                 <h3>How It Works</h3>
                 <p>1. Select your service type and rooms.</p>
                 <p>2. Enter your preferred cleaning date and contact information.</p>
@@ -704,7 +765,7 @@
                         </div>
                         <span class="logo-text">Glitters and Sparkles Cleaning</span>
                     </div>
-                    <p>Professional cleaning services you can trust. Making your space spotless since 2020.</p>
+                    <p>Professional cleaning services you can trust. Making your space spotless and glittering.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
