--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                         <h3>Preferred Cleaning Date</h3>
                         <input 
                                 type="date" 
-                                name="cleaningDate" 
+                                name="preferredDate" 
                                 required 
                                 placeholder="Select a date" 
                                 style="padding: 15px 20px; font-size: 18px; border-radius: 8px; width: 100%; max-width: 350px;"
@@ -726,7 +726,7 @@
                         </div>
                         <div class="quote-section">
                             <h3>Additional Cleaning Requests</h3>
-                            <textarea name="extraServices" placeholder="Please describe any additional cleaning services or special requests..." rows="6" style="width: 100%; padding: 13px; border-radius: 5px; resize: vertical;"></textarea>
+                            <textarea name="additionalInfo" placeholder="Please describe any additional cleaning services or special requests..." rows="6" style="width: 100%; padding: 13px; border-radius: 5px; resize: vertical;"></textarea>
                         </div>
 
                 <!-- Estimated Price -->
