--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Address</h4>
-                                <p>123 Clean Street<br>Sparkle City, SC 12345</p>
+                                <p>1345, Victoria Road 
+                                     Glasgow 
+                                     G42 7SA</p>
                             </div>
                         </div>
                         <div class="contact-item">
