--- a/index.html
+++ b/index.html
@@ -647,66 +647,66 @@
                     </div>
                 </div>
                     
-  <div class="quote-section" id="extraServices">
-    <h3>Extras</h3>
-    <div class="extras-options">
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Venetian Blind Cleaning (Per Room)" data-price="20">
-            <span class="radio-custom"></span>
-            <span class="service-label">Venetian Blind Cleaning (Per Room) - £20</span>
-        </label>
+                    <div class="quote-section" id="extraServices">
+                        <h3>Extras</h3>
+                        <div class="extras-options">
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Venetian Blind Cleaning (Per Room)" data-price="20">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Venetian Blind Cleaning (Per Room) - £20</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Inside Fridge/Freezer" data-price="29">
-            <span class="radio-custom"></span>
-            <span class="service-label">Inside Fridge/Freezer - £29</span>
-        </label>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Inside Fridge/Freezer" data-price="29">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Inside Fridge/Freezer - £29</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Inside Deep Oven" data-price="47">
-            <span class="radio-custom"></span>
-            <span class="service-label">Inside Deep Oven - £47</span>
-        </label>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Inside Deep Oven" data-price="47">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Inside Deep Oven - £47</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Tile/Wet Wall Cleaning (Per Room)" data-price="28">
-            <span class="radio-custom"></span>
-            <span class="service-label">Tile/Wet Wall Cleaning (Per Room) - £28</span>
-        </label>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Tile/Wet Wall Cleaning (Per Room)" data-price="28">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Tile/Wet Wall Cleaning (Per Room) - £28</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Inside Kitchen Cupboards" data-price="46">
-            <span class="radio-custom"></span>
-            <span class="service-label">Inside Kitchen Cupboards - £46</span>
-        </label>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Inside Kitchen Cupboards" data-price="46">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Inside Kitchen Cupboards - £46</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Inside Dishwasher" data-price="26">
-            <span class="radio-custom"></span>
-            <span class="service-label">Inside Dishwasher - £26</span>
-        </label>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Inside Dishwasher" data-price="26">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Inside Dishwasher - £26</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Inside Washing Machine" data-price="26">
-            <span class="radio-custom"></span>
-            <span class="service-label">Inside Washing Machine - £26</span>
-        </label>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Inside Washing Machine" data-price="26">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Inside Washing Machine - £26</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Wall Cleaning (Per Room)" data-price="33">
-            <span class="radio-custom"></span>
-            <span class="service-label">Wall Cleaning (Per Room) - £33</span>
-        </label>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Wall Cleaning (Per Room)" data-price="33">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Wall Cleaning (Per Room) - £33</span>
+                            </label>
 
-        <label class="service-type-option">
-            <input type="checkbox" name="extras" value="Carpet Shampooing (Per Room)" data-price="28">
-            <span class="radio-custom"></span>
-            <span class="service-label">Carpet Shampooing (Per Room) - £28</span>
-        </label>
-    </div>
-</div>
+                            <label class="service-type-option">
+                                <input type="checkbox" name="extras" value="Carpet Shampooing (Per Room)" data-price="28">
+                                <span class="radio-custom"></span>
+                                <span class="service-label">Carpet Shampooing (Per Room) - £28</span>
+                            </label>
+                        </div>
+                    </div>
 
-
+                        <!-- Preferred Date and Contact Information -->
 
                <div class="quote-section">
                         <h3>Preferred Cleaning Date</h3>
@@ -715,7 +715,7 @@
                                 name="preferredDate" 
                                 required 
                                 placeholder="Select a date" 
-                                style="padding: 15px 20px; font-size: 18px; border-radius: 8px; width: 100%; max-width: 350px;"
+                                style="padding: 15px 15px; font-size: 18px; border-radius: 8px; width: 100%; max-width: 200px;"
                             >
                         </div>
 
@@ -754,6 +754,8 @@
 </section>
 
     </main>
+
+    <!-- WhatsApp Button -->
 
      <a href="https://wa.me/4477836202627" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i>
