--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <header class="header">
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">
+          <div class="logo">
                 <a href="" onclick="location.reload()" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
-                    <div class="logo-icon">
-                        <i class="fas fa-spray-can"></i>
+                    <div class="logo-icon" style="margin-right: 8px;">
+                        <img src="assets/img/logo.jpg" alt="Glitters and Sparkles Logo" style="height: 40px; width: auto; border-radius: 10px;">
                     </div>
                     <span class="logo-text">Glitters and <strong>Sparkles</strong></span>
                 </a>
-            </div>
+                </div>
+
+
             <ul class="nav-menu">
                 <li><a href="#" class="nav-link active" data-page="home">Home</a></li>
                 <li><a href="#" class="nav-link" data-page="about">About</a></li>
@@ -145,7 +147,7 @@
                         </ul>
                     </div>
                     <div class="about-image">
-                        <img src="/assets/img/clean2.jpg" alt="Our Professional Team">
+                        <img src="/assets/img/clean1.jpg" alt="Our Professional Team">
                     </div>
                 </div>
 
@@ -763,12 +765,13 @@
 
     <!-- Footer -->
     <footer class="footer">
+        <img src="assets/img/footer.jpg" alt="Footer Background" class="footer-bg">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="logo">
                         <div class="logo-icon">
-                            <i class="fas fa-spray-can"></i>
+                            <img src="assets/img/logo.jpg" alt="Glitters and Sparkles Logo" style="height: 40px; width: auto; border-radius: 10px;">
                         </div>
                         <span class="logo-text">Glitters and Sparkles Cleaning</span>
                     </div>
