--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glitters and Sparkles Cleaning - Professional Cleaning Services</title>
     <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="icon" type="image/png" href="assets/img/logo.jpg">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
