--- a/index.html
+++ b/index.html
@@ -245,28 +245,28 @@
                     <h2>Our Work</h2>
                     <div class="gallery-grid">
                         <div class="gallery-item">
-                            <img src="/assets/img/clea.jpg" alt="Kitchen Cleaning Before/After">
+                            <img src="/assets/img/clean.jpg" alt="Kitchen Cleaning Before/After">
                             <div class="gallery-overlay">
                                 <h4>Kitchen Deep Clean</h4>
                                 <p>Before & After</p>
                             </div>
                         </div>
                         <div class="gallery-item">
-                            <img src="/assets/img/clea.jpg" alt="Office Cleaning">
+                            <img src="/assets/img/clean.jpg" alt="Office Cleaning">
                             <div class="gallery-overlay">
                                 <h4>Office Cleaning</h4>
                                 <p>Commercial Service</p>
                             </div>
                         </div>
                         <div class="gallery-item">
-                            <img src="/assets/img/clea.jpg" alt="Carpet Cleaning">
+                            <img src="/assets/img/clean.jpg" alt="Carpet Cleaning">
                             <div class="gallery-overlay">
                                 <h4>Carpet Cleaning</h4>
                                 <p>Stain Removal</p>
                             </div>
                         </div>
                         <div class="gallery-item">
-                            <img src="/assets/img/clea.jpg" alt="Window Cleaning">
+                            <img src="/assets/img/clean.jpg" alt="Window Cleaning">
                             <div class="gallery-overlay">
                                 <h4>Window Cleaning</h4>
                                 <p>Crystal Clear Results</p>
