--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                 <div class="footer-section">
                     <div class="logo">
                         <div class="logo-icon">
-                            <img src="assets/img/logo.jpg" alt="Glitters and Sparkles Logo" style="height: 40px; width: auto; border-radius: 10px;">
+                            <img src="assets/img/logo1.jpg" alt="Glitters and Sparkles Logo" style="height: 40px; width: auto; border-radius: 10px;">
                         </div>
                         <span class="logo-text">Glitters and Sparkles Cleaning</span>
                     </div>
