--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                         <div class="logo-icon">
                             <img src="assets/img/logo1.jpg" alt="Glitters and Sparkles Logo" style="height: 40px; width: auto; border-radius: 10px;">
                         </div>
-                        <span class="logo-text">Glitters and Sparkles Cleaning</span>
+                        <span class="logo-tex" style="font-size: 20px;">Glitters and Sparkles Cleaning</span>
                     </div>
                     <p>Professional cleaning services you can trust. Making your space spotless and glittering.</p>
                     <div class="social-links">
