--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="features">
                 <div class="container">
-                    <h2>Why Choose Glitters and Sparkles Cleaning?</h2>
+                    <h2>Why Choose Glitters and Sparkles <br/> Cleaning?</h2>
                     <div class="features-grid">
                         <div class="feature-card">
                             <i class="fas fa-shield-alt"></i>
